feat: added kendo-progress-bar testing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,6 +53,23 @@
   </div>
 </div>
 
+<div class="example-config">
+  <button
+    kendoButton
+    themeColor="primary"
+    [disabled]="!!running || value >= 100"
+    (click)="startProgress()"
+  >
+    {{ value ? "Resume" : "Start" }}
+  </button>
+  <button kendoButton [disabled]="!running" (click)="stopProgress()">
+    Stop
+  </button>
+  <button kendoButton [disabled]="!value" (click)="resetProgress()">
+    Reset
+  </button>
+</div>
+<kendo-progressbar [value]="value"></kendo-progressbar>
 
 <kendo-grid #grid
   [selectable] = "selectableSettings"
