fix: corrected the styling for the progress bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,7 +68,7 @@
     Reset
   </button>
 </div>
-<kendo-progressbar [value]="value"></kendo-progressbar>
+<kendo-progressbar [value]="value" [label]="label"></kendo-progressbar>
 
 <kendo-grid #grid
   [selectable] = "selectableSettings"
